gradle exclusions update